# grafana-dashboard-manager

./: .env.dist  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: codeql-analysis.yml  pypi-release.yml
grafana_cli/: __main__.py  api.py  dashboard_upload.py
grafana_dashboard_manager/: __main__.py  api.py  dashboard.py  dashboard_download.py  dashboard_upload.py  exceptions.py  folder.py  global_config.py  tree.py  utils.py
grafana_dashboard_manager/api/: auth.py  rest_client.py
grafana_dashboard_manager/commands/: __init__.py  dashboard_download.py  dashboard_upload.py
grafana_dashboard_manager/grafana/: __init__.py  grafana_api.py
grafana_dashboard_manager/handlers/: api_dashboards.py  api_folders.py  base_handler.py
grafana_dashboard_manager/models/: __init__.py  dashboard.py  folder.py
tests/integration/: docker-compose.yaml
