[tool.poetry]
name = "grafana_dashboard_manager"
version = "0.1.4"
description = "A cli utility that uses Grafana's HTTP API to easily save and restore dashboards."
authors = ["Vince Chan <vince@beamconnectivity.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.beamconnectivity.com"
repository = "https://github.com/Beam-Connectivity/grafana-dashboard-manager"
keywords = [
    "grafana",
    "dashboard",
    "json"
]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.0"
requests = "^2.26.0"
rich = "^10.14.0"
six = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grafana-dashboard-manager = "grafana_dashboard_manager.__main__:app"
