[tool.poetry]
name = "grafana_dashboard_manager"
version = "0.2.0"
description = "A cli utility that uses Grafana's HTTP API to easily save and restore dashboards."
authors = ["Vince Chan <vince@beamconnectivity.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.beamconnectivity.com"
repository = "https://github.com/Beam-Connectivity/grafana-dashboard-manager"
keywords = ["grafana", "dashboard", "json"]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
httpx = "^0.25.2"
pydantic = "^2.5.2"
ruff = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grafana-dashboard-manager = "grafana_dashboard_manager.__main__:app"

[tool.ruff]
line-length = 120
ignore-init-module-imports = true
